/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.MarketParticipant.Infrastructure.Model.Contracts";

/*
 * ActorActivated Integration Event.
 *
 * Occurs when an actor is activated.
 * This event can reoccur multiple times throughout the lifetime of an actor, as an actor can be temporary deactivated, then reactivated.
 */
message ActorActivated {

  /*
   * The EIC or GLN identifier of the actor that got (re)activated.
   */
  string actor_number = 1;

  /*
   * Specifies the type of identifier stored in the actor_number field.
   */
  ActorNumberType actor_number_type = 2;

  /*
   * The external actor id for integrating Azure AD with domains. This id is contained within B2B tokens issued by Azure.
   */
  string external_actor_id = 3;

  /*
   * A timestamp from when the activation is valid.
   */
  google.protobuf.Timestamp valid_from = 4;
}

enum ActorNumberType {
  /*
   * Unspecified is unused but according to best practice.
   * Read more at https://protobuf.dev/programming-guides/style/#enums.
   */
  ACTOR_NUMBER_TYPE_UNSPECIFIED = 0;
  ACTOR_NUMBER_TYPE_EIC = 1;
  ACTOR_NUMBER_TYPE_GLN = 2;
}